<resources>
    <string name="app_name">Bank account</string>
    <string name="account_creation_msg">Account creation</string>
    <string name="account_creation_txt">You don\'t have any account ? Create one</string>
    <string name="et_username">Username</string>
    <string name="et_email">Email (Used for password reset)</string>
    <string name="et_password_one">Password</string>
    <string name="et_password_two">Password check</string>
    <string name="btn_connexion">Connexion</string>
    <string name="btn_creation">Create account</string>
    <string name="not_existing_username">This username doesn\'t exist</string>
    <string name="password_error">Wrong password</string>
    <string name="empty_error">This field can\'t be empty</string>
    <string name="existing_username_error">This username is already used</string>
    <string name="existing_email_error">This email address is already used</string>
    <string name="existing_account">This account name is already used</string>
    <string name="password_not_corresponding">Passwords doesn\'t match</string>
    <string name="give_account_name">Give a name to your account book</string>
    <string name="account_solde">What is the current balance ?</string>
    <string name="account_name">Account name</string>
    <string name="next">Next </string>
    <string name="current_solde">Current balance</string>
    <string name="back">Previous</string>
    <string name="description">Description</string>
    <string name="valeur_indicate">Value</string>
    <string name="mensuel">Monthly</string>
    <string name="jour">Day</string>
    <string name="mois">Month</string>
    <string name="annee">Year</string>
    <string name="validate">Confirm</string>
    <string name="undo">Undo</string>
    <string name="expense_deleted">Expense deleted</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="cat_courses">Shopping</string>
    <string name="cat_fuel">Gas station</string>
    <string name="cat_gift">Gift</string>
    <string name="cat_phone">Phone and subscriptions</string>
    <string name="cat_transport_commun">Public transport</string>
    <string name="cat_trip">Trip</string>
    <string name="cat_base">Unknown</string>
    <string name="cat_diy">DIY store</string>
    <string name="cat_cinema">Cinema</string>
    <string name="cat_restaurant">Restaurant</string>
    <string name="delete_account">Delete</string>
    <string name="caution">Attention !</string>
    <string name="caution_msg">Are you sure you want to delete this account ?\nEvery linked items will be deleted too…</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_account">Edit</string>
    <string name="upcoming_fonctionnality">Upcoming fonctionnality, stay tuned !</string>
    <string name="income">Income(s)</string>
    <string name="expense">Expense(s)</string>
    <string name="raw_percentage_txt" translatable="false">xx %</string>
    <string name="forgotten_password">Forgotten password ?</string>
    <string name="invalid_email">Please enter a valid eMail address</string>
    <string name="invalid_password">Password too weak (at least 1 upper case letter, 1 lower case letter and 1 digit)</string>
    <string name="email_forgotten">Email address</string>
    <string name="pwd_forgotten">Password forgotten</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="forgot_pwd_msg">Please enter the email address linked to your account, your password will be sent there</string>
</resources>