<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="24dp"
    android:paddingLeft="24dp"
    tools:context=".controleur.AccountCreationFirst"
    android:background="@drawable/background_login">

    <Space
        android:layout_width="match_parent"
        android:layout_height="70dp" />

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_creation_msg"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_custom"
            android:padding="16dp"
            android:inputType="text"
            android:hint="@string/et_username"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_custom"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            android:hint="@string/et_email"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_one_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_custom"
            android:padding="16dp"
            android:inputType="textPassword"
            android:hint="@string/et_password_one"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_two_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_custom"
            android:padding="16dp"
            android:inputType="textPassword"
            android:hint="@string/et_password_two"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/creation_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_creation"
        android:background="@drawable/login_btn"
        android:layout_marginHorizontal="40dp" />

</LinearLayout>