<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controleur.Dashboard"
    >

    <TextView
        android:id="@+id/txt_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/raw_percentage_txt"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="80dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/layout_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/holo_green_light"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="6"
            android:layout_gravity="center_vertical"
            />
        <ImageView
            android:id="@+id/add_income_btn"
            android:contentDescription="@string/income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_bis"
            android:layout_weight="1"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_income"
        android:layout_width="match_parent"
        android:layout_marginTop="90dp"
        android:layout_height="230dp"
        tools:listitem="@layout/gain_item"
        />
    <LinearLayout
        android:id="@+id/layout_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginTop="320dp"
        android:background="@android:color/holo_red_light"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="6"
            android:layout_gravity="center_vertical"
            />
        <ImageView
            android:id="@+id/add_expense_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_bis"
            android:layout_weight="1"
            android:contentDescription="@string/expense"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_expense"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="360dp"
        tools:listitem="@layout/gain_item" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>